--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
-        <activity android:name=".ui.chooseZone.ChooseZoneActivity"></activity>
+        <activity android:name=".ui.chooseZone.ChooseZone2Activity"></activity>
+        <activity android:name=".ui.chooseZone.ChooseZoneActivity" />
         <activity android:name=".ui.intro.IntroActivity" />
         <activity android:name=".ui.login.LoginActivity" />
         <activity android:name=".ui.splash.SplashActivity">
