--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
+        android:theme="@style/Theme.OverWeights">
         <activity android:name=".ui.MainPage.MainPageActivity"></activity>
         <activity android:name=".ui.chooseZone.ChooseZone2Activity" />
         <activity android:name=".ui.chooseZone.ChooseZoneActivity" />
